--- a/home_page.html
+++ b/home_page.html
@@ -2,10 +2,10 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>LE titre de ma page</title>
+        <title>Grotte Ain Dhab</title>
         <p>
-            Voici  l'activité de l'aviron à Zaghouène:<br>
-            <img src="https://media-cdn.tripadvisor.com/media/photo-s/19/dc/7b/67/download-largejpg.jpg" alt="Photo Aviron au lac " />
+            Grotte Ain Dhab:<br>
+            <img src="/imgs/grotte-calacaire-de-tunisie-Ain-D-hab-3.jpg" alt="Photo Aviron au lac " />
             </p>
     </head>
     <body>
