--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <section class="row" id="tm-section-1">
             <div class="col-lg-12 tm-slider-col">
                 <div class="tm-img-slider">
-                    <div class="tm-img-slider-item" href="img/gallery-img-01.jpg">
+                    <div class="tm-img-slider-item" href="imgs/grotte-calacaire-de-tunisie-Ain-D-hab-3.jpg">
                         <p class="tm-slider-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <img src="img/gallery-img-01.jpg" alt="Image" class="tm-slider-img">
                     </div>
