--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                             <a class="nav-link" href="#section-3"><span class="icn"><i class="far fa-2x fa-images"></i></span> Gallery</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="detail.html><span class="icn"><i class="far fa-2x fa-images"></i></span> Détails</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#section-4"><span class="icn"><i class="far fa-2x fa-comments"></i></span> Contact</a>
                         </li>
                     </ul>
