--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <a class="nav-link" href="#section-3"><span class="icn"><i class="far fa-2x fa-images"></i></span> Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="detail.html"><span class="icn"><i class="far fa-2x fa-images"></i></span> Détails</a>
+                            <a class="nav-link" href="https://hamdinessrine.github.io/Grotte_Ain_Dhab/detail.html"><span class="icn"><i class="far fa-2x fa-images"></i></span> Détails</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#section-4"><span class="icn"><i class="far fa-2x fa-comments"></i></span> Contact</a>
