--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
                 </div>
             </section>
 
-            <section class="contact-section section" id="section-4">
+            <section class="contact-section section" id="section-4" style="height: 100vh;
+  min-height: 700px;">>
                 <div class="container">
                     <div class="title">
                         <h3>Contactez-nous</h3>
