--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         </button>
         
         <main id="content-box" class="order-first">
-            <div class="banner-section section parallax-window" data-parallax="scroll" data-image-src="img/Capture.PNG" id="section-1">
+            <div class="banner-section section parallax-window" data-parallax="scroll" data-image-src="img/Capture.PNG" id="section-1" style="height: 100vh;
+  min-height: 700px;">
                 <div class="container">
                     <div class="item">
                         <div class="logo-fa"><span><i class="fa fa-eye" aria-hidden="true"></i></span> مغارة عين ذهب</div>
