--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </section>
 
             <section class="contact-section section" id="section-4" style="height: 100vh;
-  min-height: 700px;">>
+  min-height: 700px;">
                 <div class="container">
                     <div class="title">
                         <h3>Contactez-nous</h3>
